--- a/bookers2/app/views/layouts/application.html.erb
+++ b/bookers2/app/views/layouts/application.html.erb
@@ -3,12 +3,41 @@
   <head>
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
+    <header>
+      <%#　ログイン時　%>
+      <% if user_signed_in? %>
+        <li>
+          <%= link_to "Home",user_path(current_user.id) %>
+        </li>
+        <li>
+          <%= link_to "Users",users_path %>
+        <li>
+          <%= link_to "Books",books_path %>
+        </li>
+        <li>
+          <%= link_to "logout",destroy_user_session_path, method: :delete%>
+          <%#　処理手順がわからない %>
+        </li>
+      <%#　ログアウト時　%>
+      <% else %>
+        <li>
+          <%= link_to "Home",root_path %>
+        </li>
+        <li>
+          <%= link_to "About",about_path  %>
+        </li>
+        <li>
+          <%= link_to "sign up",new_user_registration_path %>
+        </li>
+        <li>
+          <%= link_to "login",new_user_session_path %>
+        </li>
+      <% end %>
+  　</header>
     <%= yield %>
   </body>
 </html>
