--- a/bookers2/app/views/books/index.html.erb
+++ b/bookers2/app/views/books/index.html.erb
@@ -1,6 +1,11 @@
-<%#　プロフィール編集　%>
+<%# 共通部分　↓　%>
 
+<%#　プロフィール編集　%>
 <h2>User Info</h2>
+<%= attachment_image_tag current_user, :profile_image, size: "60×60", fallback: "no_image.jpg"%>
+<p>name<%= current_user.name %></p>
+<p>introduction<%= current_user.introduction %></p>
+<button><%= link_to "Edit",edit_user_path(current_user.id) %></button>
 
 
 <%# 新規投稿 %>
@@ -15,13 +20,21 @@
     <% end %>
   </div>
 
+<%# 共通部分　↑ %>
+
 <%# 投稿一覧 %>
 <h2>Books</h2>
 <table>
   <tr>
+    <th>image</th>
     <th>title</th>
     <th>opinion</th>
   </tr>
+  <% @users.each do |user|%>
+  <tr>
+    <td><%= user.profile_image %></td>
+  </tr>
+  <% end %>
   <% @books.each do |book| %>
   <tr>
     <td><%= book.title %></td>
