--- a/bookers2/app/views/users/index.html.erb
+++ b/bookers2/app/views/users/index.html.erb
@@ -1,10 +1,12 @@
+<%# 共通部分　↓　%>
 
 <%#　プロフィール編集　%>
 
 <h2>User Info</h2>
-<%= image_tag('no_image.jpg') %>
-<%= @user.name %>
-<%= @user.introduction %>
+<%= attachment_image_tag current_user, :profile_image, size: "60×60", fallback: "no_image.jpg"%>
+<p>name<%= current_user.name %></p>
+<p>introduction<%= current_user.introduction %></p>
+<button><%= link_to "Edit",edit_user_path(current_user.id) %></button>
 
 
 <%# 新規投稿 %>
@@ -18,3 +20,5 @@
       <%= f.submit 'Create Book' %>
     <% end %>
   </div>
+
+<%# 共通部分　↑ %>
