--- a/bookers2/app/views/users/index.html.erb
+++ b/bookers2/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 <%#　プロフィール編集　%>
 
 <h2>User Info</h2>
-<%= attachment_image_tag current_user, :profile_image, size: "60×60", fallback: "no_image.jpg"%>
+<%= attachment_image_tag current_user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
 <p>name<%= current_user.name %></p>
 <p>introduction<%= current_user.introduction %></p>
 <button><%= link_to "Edit",edit_user_path(current_user.id) %></button>
@@ -11,7 +11,7 @@
 
 <%# 新規投稿 %>
   <div>
-    <%= form_with model: @book, local:true do |f| %>
+    <%= form_with model: @new_book, local:true do |f| %>
       <h2>New Book</h2>
       <h4>title</h4>
       <%= f.text_field :title %>
