--- a/bookers2/app/views/users/show.html.erb
+++ b/bookers2/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <%#　プロフィール編集　%>
 <h2>User Info</h2>
-<%= attachment_image_tag current_user, :profile_image, size: "60×60", fallback: "no_image.jpg"%>
+<%= attachment_image_tag current_user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
 <p>name<%= current_user.name %></p>
 <p>introduction<%= current_user.introduction %></p>
 <button><%= link_to "Edit",edit_user_path(current_user.id) %></button>
@@ -10,7 +10,7 @@
 
 <%# 新規投稿 %>
   <div>
-    <%= form_with model: @book, local:true do |f| %>
+    <%= form_with model: @new_book, local:true do |f| %>
       <h2>New Book</h2>
       <h4>title</h4>
       <%= f.text_field :title %>
@@ -23,16 +23,16 @@
 <%# 共通部分　↑ %>
 
 <%# 投稿一覧 %>
-  <h2>Books</h2>
+ <h2>Books</h2>
 <table>
   <tr>
+    <th>image</th>
     <th>title</th>
     <th>opinion</th>
   </tr>
-  <% @books.each do |book| %>
   <tr>
-    <td><%= book.title %></td>
-    <td><%= book.body %></td>
+    <td><%= attachment_image_tag current_user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
+    <td><%= @book.title %></td>
+    <td><%= @book.body %></td>
   </tr>
-  <% end %>
 </table>
