--- a/bookers2/app/views/layouts/application.html.erb
+++ b/bookers2/app/views/layouts/application.html.erb
@@ -38,6 +38,10 @@
         </li>
       <% end %>
   　</header>
+
     <%= yield %>
+    <footer>
+  　 <p> CopyRight Infratop.inc</p>
+  　</footer>
   </body>
 </html>
