--- a/bookers2/app/views/books/index.html.erb
+++ b/bookers2/app/views/books/index.html.erb
@@ -10,13 +10,13 @@
 
 <%# 新規投稿 %>
   <div>
-    <%= form_with model: @book, local:true do |f| %>
+    <%= form_with model: @new_book, local:true do |f| %>
       <h2>New Book</h2>
       <h4>title</h4>
       <%= f.text_field :title %>
       <h4>opinion</h4>
       <%= f.text_area :body %>
-      <%= f.submit 'Create Book' %>
+    <p><%= f.submit 'Create Book' %></p>
     <% end %>
   </div>
 
@@ -25,20 +25,21 @@
 <%# 投稿一覧 %>
 <h2>Books</h2>
 <table>
-  <tr>
-    <th>image</th>
-    <th>title</th>
-    <th>opinion</th>
-  </tr>
-  <% @users.each do |user|%>
-  <tr>
-    <td><%= attachment_image_tag user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
-  </tr>
-  <% end %>
-  <% @books.each do |book| %>
-  <tr>
-    <td><%= book.title %></td>
-    <td><%= book.body %></td>
-  </tr>
-  <% end %>
+  <thead>
+    <tr>
+      <th colspan="1"></th>
+      <th>title</th>
+      <th>opinion</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @books.zip(@users).each do |book,user| %>
+    <tr>
+      <td><%= attachment_image_tag user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
+      <td><%= link_to "#{book.title}",book_path(book) %></td>
+      <td><%= book.body %></td>
+    </tr>
+    <% end %>
+  </tbody>
+
 </table>
