--- a/bookers2/app/views/users/show.html.erb
+++ b/bookers2/app/views/users/show.html.erb
@@ -2,10 +2,13 @@
 
 <%#　プロフィール編集　%>
 <h2>User Info</h2>
-<%= attachment_image_tag current_user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
-<p>name<%= current_user.name %></p>
-<p>introduction<%= current_user.introduction %></p>
-<button><%= link_to "Edit",edit_user_path(current_user.id) %></button>
+<%= attachment_image_tag @user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
+<p>name<%= @user.name %></p>
+<p>introduction<%= @user.introduction %></p>
+ <% if @user.id == current_user.id %>
+   <button><%= link_to "Edit",edit_user_path(current_user.id) %></button>
+  <% end %>
+
 
 
 <%# 新規投稿 %>
@@ -16,7 +19,7 @@
       <%= f.text_field :title %>
       <h4>opinion</h4>
       <%= f.text_area :body %>
-      <%= f.submit 'Create Book' %>
+    <p><%= f.submit 'Create Book' %></p>
     <% end %>
   </div>
 
@@ -24,15 +27,18 @@
 
 <%# 投稿一覧 %>
  <h2>Books</h2>
+
 <table>
   <tr>
-    <th>image</th>
+    <th colspan="1"></th>
     <th>title</th>
     <th>opinion</th>
   </tr>
+  <% @books.each do |book|%>
   <tr>
     <td><%= attachment_image_tag current_user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
-    <td><%= @book.title %></td>
-    <td><%= @book.body %></td>
+    <td><%= link_to "#{book.title}",books_path %></td>
+    <td><%= book.body %></td>
   </tr>
+  <% end %>
 </table>
