--- a/bookers2/app/views/users/show.html.erb
+++ b/bookers2/app/views/users/show.html.erb
@@ -36,8 +36,8 @@
   </tr>
   <% @books.each do |book|%>
   <tr>
-    <td><%= attachment_image_tag current_user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
-    <td><%= link_to "#{book.title}",books_path %></td>
+    <td><%= attachment_image_tag @user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
+    <td><%= link_to "#{book.title}",book_path(book) %></td>
     <td><%= book.body %></td>
   </tr>
   <% end %>
