--- a/bookers2/app/views/books/show.html.erb
+++ b/bookers2/app/views/books/show.html.erb
@@ -1,10 +1,34 @@
 <%#　プロフィール編集　%>
 
-<h2>User Info</h2>
-<%= attachment_image_tag current_user, :profile_image,size: "60x60",fallback:"no_image.jpg"%>
+<h2>User Info</h2>s
+<%= attachment_image_tag current_user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
 <p>name<%= current_user.name %></p>
 <p>introduction<%= current_user.introduction %></p>
 <button><%= link_to "Edit",edit_user_path(current_user.id) %></button>
+
+
+<%# 　プロフィール更新　バリデーションチェック　エラー　%>
+<% if @book.errors.any? %>
+  <%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</p>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+<% end %>
+
+
+<%#　サクセスメッセージ(新規投稿時・投稿更新時)　%>
+ <% if flash[:success] %>
+    <%= flash[:success] %>
+ <% end %>
+
+<%#　プロフィール画面 %>
+<h2>User Info</h2>
+<%= attachment_image_tag @book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%>
+<p>name<%= @book.user.name %></p>
+<p>introduction<%= @book.user.introduction %></p>
+<button><%= link_to "Edit",edit_user_path(@book.user.id) %></button>
 
 <%# 新規投稿 %>
   <div>
@@ -18,12 +42,12 @@
     <% end %>
   </div>
 
-
+<%# 詳細画面 %>
 <h2>Book detail</h2>
-<%#><% if @book.user_id == @user.id %>
-<%= attachment_image_tag current_user, :profile_image,size: "60x60",fallback:"no_image.jpg"%>
-<%= link_to "#{current_user.name}",user_path(current_user) %>
-<%= link_to "#{@book.title}",book_path(@book) %>
+
+<%= attachment_image_tag @book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%>
+<%= link_to "#{@book.user.name}",user_path(@book.user) %>
+<%= link_to "#{@book.title}",book_path(@book.id) %>
 <%= @book.body %>
 <%#><% end %>
 <% if @book.user_id == current_user.id %>
