アイコン画像を追加

--- a/bookers2/app/views/books/show.html.erb
+++ b/bookers2/app/views/books/show.html.erb
@@ -1,56 +1,46 @@
-<%#　プロフィール編集　%>
-
-<h2>User Info</h2>s
-<%= attachment_image_tag current_user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
-<p>name<%= current_user.name %></p>
-<p>introduction<%= current_user.introduction %></p>
-<button><%= link_to "Edit",edit_user_path(current_user.id) %></button>
-
-
-<%# 　プロフィール更新　バリデーションチェック　エラー　%>
-<% if @book.errors.any? %>
-  <%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</p>
-    <ul>
-      <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-      <% end %>
-    </ul>
-<% end %>
-
-
-<%#　サクセスメッセージ(新規投稿時・投稿更新時)　%>
- <% if flash[:success] %>
-    <%= flash[:success] %>
- <% end %>
-
-<%#　プロフィール画面 %>
-<h2>User Info</h2>
-<%= attachment_image_tag @book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%>
-<p>name<%= @book.user.name %></p>
-<p>introduction<%= @book.user.introduction %></p>
-<button><%= link_to "Edit",edit_user_path(@book.user.id) %></button>
-
-<%# 新規投稿 %>
-  <div>
-    <%= form_with model: @new_book, local:true do |f| %>
-      <h2>New Book</h2>
-      <h4>title</h4>
-      <%= f.text_field :title %>
-      <h4>opinion</h4>
-      <%= f.text_area :body %>
-      <p><%= f.submit 'Create Book' %></p>
+<html>
+  <body>
+    <%# 　プロフィール更新　バリデーションチェック　エラー　%>
+    <% if @book.errors.any? %>
+      <%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</p>
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+          <% end %>
+        </ul>
     <% end %>
-  </div>
-
-<%# 詳細画面 %>
-<h2>Book detail</h2>
-
-<%= attachment_image_tag @book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%>
-<%= link_to "#{@book.user.name}",user_path(@book.user) %>
-<%= link_to "#{@book.title}",book_path(@book.id) %>
-<%= @book.body %>
-<%#><% end %>
-<% if @book.user_id == current_user.id %>
-  <button><%= link_to "edit",edit_book_path(@book) %></button>
-  <button><%= link_to "destroy",book_path(@book),method: :delete,"data-confirm"=>"本当に消しますか"%></button>
-<% end %>
+    <%#　サクセスメッセージ(新規投稿時・投稿更新時)　%>
+    <% if flash[:success] %>
+      <%= flash[:success] %>
+    <% end %>
+    <%#　プロフィール画面 %>
+    <h2>User Info</h2>
+    <%= attachment_image_tag @book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%>
+    <p>name<%= @book.user.name %></p>
+    <p>introduction<%= @book.user.introduction %></p>
+     <% if @user.id == current_user.id %>
+         <button><a href=/users/<%= current_user.id %>/edit><i class="fas fa-user-cog"></i></a></button>
+     <% end %>
+    <%# 新規投稿 %>
+    <div>
+      <%= form_with model: @new_book, local:true do |f| %>
+        <h2>New Book</h2>
+        <h4>title</h4>
+        <%= f.text_field :title %>
+        <h4>opinion</h4>
+        <%= f.text_area :body %>
+        <p><%= f.submit 'Create Book' %></p>
+      <% end %>
+    </div>
+    <%# 詳細画面 %>
+    <h2>Book detail</h2>
+    <%= attachment_image_tag @book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%>
+    <%= link_to "#{@book.user.name}",user_path(@book.user) %>
+    <%= link_to "#{@book.title}",book_path(@book.id) %>
+    <%= @book.body %>
+    <% if @book.user_id == current_user.id %>
+      <button><%= link_to "edit",edit_book_path(@book) %></button>
+      <button><%= link_to "destroy",book_path(@book),method: :delete,"data-confirm"=>"本当に消しますか"%></button>
+    <% end %>
+  </body>
+</html>
