--- a/bookers2/app/views/layouts/application.html.erb
+++ b/bookers2/app/views/layouts/application.html.erb
@@ -5,18 +5,20 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
   </head>
   <body>
     <header>
+      <p>Bookers</p>
       <%#　ログイン時　%>
       <% if user_signed_in? %>
         <li>
-          <%= link_to "Home",user_path(current_user.id) %>
+          <a href=/users/<%= current_user.id %>><i class='fas fa-home'></i>Home</a>
         </li>
         <li>
-          <%= link_to "Users",users_path %>
+          <a href=/users><i class="fas fa-users"></i>Users</a>
         <li>
-          <%= link_to "Books",books_path %>
+          <a href=/books ><i class="fas fa-book-open"></i>Books</a>
         </li>
         <li>
           <%= link_to "logout",destroy_user_session_path, method: :delete%>
@@ -25,16 +27,16 @@
       <%#　ログアウト時　%>
       <% else %>
         <li>
-          <%= link_to "Home",root_path %>
+           <a href=/><i class="fas fa-home"></i>Home</a>
         </li>
         <li>
-          <%= link_to "About",about_path  %>
+          <a href=/home/about><i class="fas fa-link"></i>About</a>
         </li>
         <li>
-          <%= link_to "sign up",new_user_registration_path %>
+          <a href=/users/sign_up><i class="fas fa-user-plus"></i>sign up</a>
         </li>
         <li>
-          <%= link_to "login",new_user_session_path %>
+          <a href=/users/sign_in><i class="fas fa-sign-out-alt"></i>login</a>
         </li>
       <% end %>
   　</header>
