--- a/bookers2/app/views/users/index.html.erb
+++ b/bookers2/app/views/users/index.html.erb
@@ -1,47 +1,44 @@
-<%# 共通部分　↓　%>
-
-<%#　プロフィール編集　%>
-
-<h2>User Info</h2>
-<%= attachment_image_tag current_user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
-<p>name<%= current_user.name %></p>
-<p>introduction<%= current_user.introduction %></p>
-<button><%= link_to "Edit",edit_user_path(current_user.id) %></button>
-
-
-<%# 新規投稿 %>
-  <div>
-    <%= form_with model: @book, local:true do |f| %>
-      <h2>New Book</h2>
-      <h4>title</h4>
-      <%= f.text_field :title %>
-      <h4>opinion</h4>
-      <%= f.text_area :body %>
-      <p><%= f.submit 'Create Book' %></p>
-    <% end %>
-  </div>
-
-<%# 共通部分　↑ %>
-
-<%# ユーザー一覧　%>
-
-<h2>Users</h2>
-<table>
-  <thead>
-    <tr>
-      <th>image</th>
-      <th>name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <% @users.each do |user|%>
-  <tbody>
-    <tr>
-      <td><%= attachment_image_tag user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
-      <td><%= user.name %></td>
-      <td><%= link_to "show",user_path(user) %></td>
-    </tr>
-  </tbody>
-  <% end %>
-</table>
+<html>
+  <body>
+    <%# 共通部分　↓　%>
+    <%#　プロフィール編集　%>
+    <h2>User Info</h2>
+    <%= attachment_image_tag current_user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
+    <p>name<%= current_user.name %></p>
+    <p>introduction<%= current_user.introduction %></p>
+    <button><a href=/users/<%= current_user.id %>/edit><i class="fas fa-user-cog"></i></a></button>
+    <%# 新規投稿 %>
+    <div>
+      <%= form_with model: @book, local:true do |f| %>
+        <h2>New Book</h2>
+        <h4>title</h4>
+        <%= f.text_field :title %>
+        <h4>opinion</h4>
+        <%= f.text_area :body %>
+        <p><%= f.submit 'Create Book' %></p>
+      <% end %>
+    </div>
+    <%# 共通部分　↑ %>
+    <%# ユーザー一覧　%>
+    <h2>Users</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>image</th>
+          <th>name</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <% @users.each do |user|%>
+      <tbody>
+        <tr>
+          <td><%= attachment_image_tag user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
+          <td><%= user.name %></td>
+          <td><%= link_to "show",user_path(user) %></td>
+        </tr>
+      </tbody>
+      <% end %>
+    </table>
+  </body>
+</html>
 
