--- a/bookers2/app/views/books/index.html.erb
+++ b/bookers2/app/views/books/index.html.erb
@@ -1,71 +1,65 @@
-<%# ログイン　サクセス・エラーメッセージ　%>
-<% if notice %>
-　　<p><%= notice %></p>
-<% end %>
-<% if alert %>
-<p><%= alert %></p>
-<% end %>
+<html>
+  <body>
+    <%# ログイン　サクセス・エラーメッセージ　%>
+    <% if notice %>
+　    　<p><%= notice %></p>
+    <% end %>
+    <% if alert %>
+    <p><%= alert %></p>
+    <% end %>
+    <%#　エラーメッセージ(新規投稿時・更新時)　%>
+    <% if flash[:danger] %>
+    <%= flash[:danger] %>
+    <% end %>
+    <%# 新規投稿・更新　バリデーションチェック　エラー　%>
+    <% if @book.errors.any? %>
+      <%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</p>
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+          <% end %>
+        </ul>
+    <% end %>
 
-<%#　エラーメッセージ(新規投稿時・更新時)　%>
- <% if flash[:danger] %>
- <%= flash[:danger] %>
- <% end %>
-
-<%# 新規投稿・更新　バリデーションチェック　エラー　%>
-
-<% if @book.errors.any? %>
-  <%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</p>
-    <ul>
-      <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+    <%# 共通部分　↓　%>
+    <%#　プロフィール編集　%>
+    <h2>User Info</h2>
+    <%= attachment_image_tag current_user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
+    <p>name<%= current_user.name %></p>
+    <p>introduction<%= current_user.introduction %></p>
+    <button><a href=/users/<%= current_user.id %>/edit><i class="fas fa-user-cog"></i></a></button>
+    <%# 新規投稿 %>
+    <div>
+      <%= form_with model: @book, local:true do |f| %>
+        <h2>New Book</h2>
+        <h4>title</h4>
+        <%= f.text_field :title %>
+        <h4>opinion</h4>
+        <%= f.text_area :body %>
+      <p><%= f.submit 'Create Book' %></p>
       <% end %>
-    </ul>
-<% end %>
+    </div>
+    <%# 共通部分　↑ %>
 
-
-
-<%# 共通部分　↓　%>
-
-<%#　プロフィール編集　%>
-<h2>User Info</h2>s
-<%= attachment_image_tag current_user, :profile_image, size: "60x60", fallback: "no_image.jpg"%>
-<p>name<%= current_user.name %></p>
-<p>introduction<%= current_user.introduction %></p>
-<button><%= link_to "Edit",edit_user_path(current_user.id) %></button>
-
-
-<%# 新規投稿 %>
-  <div>
-    <%= form_with model: @book, local:true do |f| %>
-      <h2>New Book</h2>
-      <h4>title</h4>
-      <%= f.text_field :title %>
-      <h4>opinion</h4>
-      <%= f.text_area :body %>
-    <p><%= f.submit 'Create Book' %></p>
-    <% end %>
-  </div>
-
-<%# 共通部分　↑ %>
-
-<%# 投稿一覧 %>
-<h2>Books</h2>
-<table>
-  <thead>
-    <tr>
-      <th colspan="1"></th>
-      <th>title</th>
-      <th>opinion</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @books.each do |book| %>
-    <tr>
-      <td><%= attachment_image_tag book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
-      <td><%= link_to "#{book.title}",book_path(book) %></td>
-      <td><%= book.body %></td>
-    </tr>
-    <% end %>
-  </tbody>
-
-</table>
+    <%# 投稿一覧 %>
+    <h2>Books</h2>
+    <table>
+      <thead>
+        <tr>
+          <th colspan="1"></th>
+          <th>title</th>
+          <th>opinion</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @books.each do |book| %>
+        <tr>
+          <td><%= attachment_image_tag book.user, :profile_image,size: "60x60",fallback:"no_image.jpg"%></td>
+          <td><%= link_to "#{book.title}",book_path(book) %></td>
+          <td><%= book.body %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </body>
+</html>
