--- a/bookers2/app/views/homes/top.html.erb
+++ b/bookers2/app/views/homes/top.html.erb
@@ -1,12 +1,17 @@
-<% if notice %>
-<p><%= notice %></p>
-<% end %>
-<h1>welcome to Bookers !!</h1>
-<p>In <steong>Bookers</strong>,</br>
-you can share and exchange your opinions , inpressions , and emotions</br>
-about various books!</p>
-
-<p><button><%= link_to "Log in", new_user_session_path %></button></p>
-
-<p><button><%= link_to "Sign up",new_user_registration_path %></button></p>
-<p>CopyRight Infratop.inc</p>
+<html>
+  <head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"> <!-- 追加 -->
+  </head>
+  <body>
+    <% if notice %>
+    <p><%= notice %></p>
+    <% end %>
+    <h1>welcome to <i class="fas fa-book"></i>Bookers !!</h1>
+    <p>In<i class="fas fa-book"></i> <steong>Bookers</strong>,</br>
+    you can share and exchange your opinions , inpressions , and emotions</br>
+    about various books!</p>
+    <p><button><%= link_to "Log in", new_user_session_path %></button></p>
+    <p><button><%= link_to "Sign up",new_user_registration_path %></button></p>
+    <p>CopyRight Infratop.inc</p>
+  </body>
+</html>
